Dividindo as rotas em diferentes arquivos.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,11 @@
-<h1>testando</h1>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <title>Blog Crud</title>
+    <link rel="stylesheet" href="/css/home.css">
+</head>
+<body>
+    <h1>Meu blog</h1>
+</body>
+</html>
