Adiçao da navbar na pagina principal

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>Blog Crud</title>
     <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/global.css">
 </head>
 <body>
+    <%- include("./partials/navbar.ejs") %>
     <h1>Meu blog</h1>
 </body>
 </html>
