--- a/views/admin/categories/new.ejs
+++ b/views/admin/categories/new.ejs
@@ -14,7 +14,7 @@
                 <h2>Cadastro de categoria</h2>
             </div>
             <div class="card-body">
-                <form action="">
+                <form action="/categories/save" method="POST">
                     <input type="text" name="title" placeholder="Defina o título da categoria">
                     <button>Cadastrar</button>
                 </form>
