Adicionando botoes de editar e deletar categorias

--- a/views/admin/categories/index.ejs
+++ b/views/admin/categories/index.ejs
@@ -27,6 +27,13 @@
                         <th><%= category.id %></th>
                         <th><%= category.title %></th>
                         <th><%= category.slug %></th>
+                        <th>
+                            <button>Editar</button>
+                            <form method="POST" action="/categories/delete">
+                                <input type="hidden" name="id" value="<%= category.id%>">
+                                <button>Deletar</button>
+                            </form>
+                        </th>
                     </tr>
                 <% }) %>
             </tbody>
