--- a/views/admin/categories/index.ejs
+++ b/views/admin/categories/index.ejs
@@ -28,7 +28,7 @@
                         <th><%= category.title %></th>
                         <th><%= category.slug %></th>
                         <th>
-                            <button>Editar</button>
+                            <a href="/admin/categories/edit/<%= category.id %>">Editar</a>
                             <form method="POST" action="/categories/delete" onsubmit="deletionConfirm(event, this)">
                                 <input type="hidden" name="id" value="<%= category.id%>">
                                 <button>Deletar</button>
