--- a/views/admin/categories/edit.ejs
+++ b/views/admin/categories/edit.ejs
@@ -14,8 +14,9 @@
                 <h2>Edição de categoria</h2>
             </div>
             <div class="card-body">
-                <form action="/categories/save" method="POST">
+                <form action="/categories/update" method="POST">
                     <input type="text" name="title" placeholder="Defina o título da categoria" value="<%= category.title %>">
+                    <input type="hidden" name="id" value="<%= category.id %>">
                     <button>Atualizar</button>
                 </form>
             </div>
