--- a/views/admin/articles/new.ejs
+++ b/views/admin/articles/new.ejs
@@ -17,8 +17,13 @@
                 <form action="/articles/save" method="POST">
                     <input type="text" name="title" placeholder="Defina o título do artigo">
                     <textarea placeholder="Escreva o artigo aqui" name="body" id="article">
-
                     </textarea>
+                    <label>Categoria</label>
+                    <select name="category">
+                        <% categories.forEach(category =>{ %>
+                            <option value="<%= category.id %>"><%= category.title %></option>
+                        <% }) %>
+                    </select>
                     <button>Cadastrar</button>
                 </form>
             </div>
@@ -31,7 +36,7 @@
         language:'pt_BR',
         selector: "#article",
         plugins: [
-            'advlist autolink link image lists print preview hr searchreplace wordcount fullscreen isertdatetime media save table paste emoticons'
+            'advlist autolink link image lists print preview hr searchreplace wordcount fullscreen insertdatetime media save table paste emoticons'
         ]
     });
 </script>
