Adicionando link para pagina de exibiçao de artigos

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -3,4 +3,5 @@
 <nav class="navbar">
     <a class="a" href="/">Blog Crud</a>
     <a href="/admin/categories">Categorias</a>
+    <a href="/admin/articles">Artigos</a>
 </nav>
