--- a/views/admin/articles/index.ejs
+++ b/views/admin/articles/index.ejs
@@ -29,7 +29,12 @@
                         <td><%= article.title %></td>
                         <td><%= article.slug %></td>
                         <td><%= article.category.title %></td>
-                        <td></td>
+                        <td>
+                            <form method="POST" action="/articles/delete" onsubmit="deletionConfirm(event, this)">
+                                <input type="hidden" name="id" value="<%= article.id%>">
+                                <button>Deletar</button>
+                            </form>
+                        </td>
                     </tr>
                <% }) %>
             </tbody>
@@ -39,7 +44,7 @@
 <script>
     function deletionConfirm( event, form){
         event.preventDefault();
-        var decision = confirm("Você realmente deseja deletar esta categoria?");
+        var decision = confirm("Você realmente deseja deletar este artigo?");
         if(decision){
             form.submit();
         }
