Adicionando funcionalidade ao botao de ler artigo

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
                     <h2><%= article.title %></h2>
                 </div>
                 <div class="card-body">
-                    <a href="">Ler artigo</a>
+                    <a href="/<%= article.slug %>">Ler artigo</a>
                 </div>
             </div>
         <% }) %>
