--- a/views/article.ejs
+++ b/views/article.ejs
@@ -14,7 +14,7 @@
                 <h2><%= article.title %></h2>
             </div>
             <div class="card-body">
-                <%= article.body %>
+                <%- article.body %>
             </div>
         </div>
     </div>
