Adicionando funcionalidade aos links para filtragem por categoria

--- a/views/partials/homeNavbar.ejs
+++ b/views/partials/homeNavbar.ejs
@@ -2,4 +2,7 @@
 
 <nav class="navbar">
     <a class="a" href="/">Blog Crud</a>
+    <% categories.forEach(category => { %>
+        <a href="/category/<%= category.slug %>"><%= category.title %></a>    
+    <% }) %>
 </nav>
