--- a/views/admin/articles/edit.ejs
+++ b/views/admin/articles/edit.ejs
@@ -14,14 +14,19 @@
                 <h2>Editar artigo</h2>
             </div>
             <div class="card-body">
-                <form action="/articles/save" method="POST">
+                <form action="/article/update" method="POST">
+                    <input type="hidden" value="<%= article.id %>" name="id">
                     <input type="text" name="title" placeholder="Defina o título do artigo" value="<%= article.title %>">
                     <textarea placeholder="Escreva o artigo aqui" name="body" id="article">
                     </textarea>
                     <label>Categoria</label>
                     <select name="category">
                         <% categories.forEach(category =>{ %>
-                            <option value="<%= category.id %>"><%= category.title %></option>
+                            <% if(category.id == article.categoryId){ %>
+                                <option value="<%= category.id %>" selected><%= category.title %></option>
+                            <% }else{ %>
+                                <option value="<%= category.id %>"><%= category.title %></option>
+                            <% } %>
                         <% }) %>
                     </select>
                     <button>Editar</button>
