--- a/views/admin/articles/page.ejs
+++ b/views/admin/articles/page.ejs
@@ -20,6 +20,17 @@
                     </div>
                 </div>
             <% }) %>
+            <div class="row">
+                <% if(result.page > 1){ %>
+                    <a href="/articles/page/<%= result.page - 1 %>"> <<< Prev</a>
+                <% }else if(result.page == 1){ %>
+                    <a href="/"> <<< Prev</a>
+                <% } %>
+
+                <% if(result.next){ %>
+                    <a href="/articles/page/<%= result.page + 1 %>">Next >>></a>
+                <% } %>
+            </div>
         </div>
     </div>
 </body>
