Adicionando link de logout na navbar da area de administradores

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -4,4 +4,5 @@
     <a class="a" href="/">Blog Crud</a>
     <a href="/admin/categories">Categorias</a>
     <a href="/admin/articles">Artigos</a>
+    <a href="/logout" class="logout">Logout</a>
 </nav>
